added a logo thing to the navbar

--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,7 @@ ADD TO messages/send/sent buttons to redirect between the 3 pages
 add some text for each page to explain what to do?
 
 check diff button types - match each for each page
+
+add cake background image
+
+GET CAKE LOGO (or cite one)
