used the pictures

--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,9 @@
 Layout change the ICON in <head>
-ADD TO messages/send/sent buttons to redirect between the 3 pages
-add some text for each page to explain what to do?
-
-check diff button types - match each for each page
 
 add cake background image
 
 GET CAKE LOGO (or cite one) (OR REPLACE THE BIRTHDAY MEET TEXT WITH AN IMAGE)
 
-format:
-    index
+add image to index
+
+add pictures to readme
